--- a/style.css
+++ b/style.css
@@ -1,5 +1,16 @@
-ul{
-list-style-type: none;
-margin: 2px;
-padding-left: 4em;
+*{
+    margin: 0;
+    padding: 0;
+}
+.header{
+    min-height: 100vh;
+    width: 100%;
+    background-image: linear-gradient(rgba(4,9,30,0.7), rgba(4,9,30,0.7 )),url(background1.jpg);
+    background-position: center;
+    background-size: cover;
+    position: relative;
+}
+.nav-links{
+display: flex;
+
 }
