--- a/style.css
+++ b/style.css
@@ -1,16 +1,38 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Genos", sans-serif;
 }
-.header{
-    min-height: 100vh;
-    width: 100%;
-    background-image: linear-gradient(rgba(4,9,30,0.7), rgba(4,9,30,0.7 )),url(background1.jpg);
-    background-position: center;
-    background-size: cover;
-    position: relative;
+.header {
+  min-height: 100vh;
+  width: 100%;
+  background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)),
+    url(background1.jpg);
+  background-position: center;
+  background-size: cover;
+  position: relative;
 }
-.nav-links{
-display: flex;
-
+.nav-links {
+  display: flex;
+  padding: 3% 6%;
+  justify-content: space-between;
+  align-items: right;
+}
+nav img {
+  width: 150px;
+}
+.nav-links {
+  flex: 3;
+  text-align: right;
+}
+.nav-links ul li {
+  list-style: none;
+  display: inline-block;
+  padding: 20px 50px;
+  position: relative;
+}
+.nav-links ul li a {
+  color: white;
+  text-decoration: none;
+  font-size: 13px;
 }
