--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: "Genos", sans-serif;
 }
 .header {
   min-height: 100vh;
@@ -22,7 +21,7 @@ nav img {
   width: 150px;
 }
 .nav-links {
-  flex: 3;
+  flex: 1;
   text-align: right;
 }
 .nav-links ul li {
@@ -35,4 +34,9 @@ nav img {
   color: white;
   text-decoration: none;
   font-size: 13px;
+}
+nav a {
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
 }
