--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 .header {
   min-height: 100vh;
   width: 100%;
-  background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)),
+  background-image: linear-gradient(rgba(11, 2, 2, 0.7), rgba(124, 124, 124, 0.7)),
     url(background1.jpg);
   background-position: center;
   background-size: cover;
@@ -14,8 +14,8 @@
 .nav-links {
   display: flex;
   padding: 3% 6%;
-  justify-content: space-between;
-  align-items: right;
+  justify-content:space-between;
+  align-items: center;
 }
 nav img {
   width: 150px;
@@ -27,7 +27,7 @@ nav img {
 .nav-links ul li {
   list-style: none;
   display: inline-block;
-  padding: 20px 50px;
+  padding: 30px 50px;
   position: relative;
 }
 .nav-links ul li a {
@@ -40,3 +40,28 @@ nav a {
   text-decoration: none;
   font-weight: bold;
 }
+.nav-links ul li {
+  list-style: none;
+  display: inline-block;
+  padding: 8px 12px;
+  position: relative;
+}
+
+.nav-links ul li a {
+  color: rgba(255, 255, 255, 0.94);
+  text-decoration: none;
+  font-size: 13px;
+}
+.nav-links ul li a::after {
+  content: '';
+  width: 0%;
+  height: 2px;
+  background: #f44336;
+  display: block;
+  margin: auto;
+  transition: 0.5s ease-in-out;  
+}
+.nav-links ul li a :hover::after {
+  width: 100%;
+}
+
