--- a/style.css
+++ b/style.css
@@ -5,41 +5,45 @@
 .header {
   min-height: 100vh;
   width: 100%;
-  background-image: linear-gradient(rgba(11, 2, 2, 0.7), rgba(124, 124, 124, 0.7)),
+  background-image: linear-gradient(
+      rgba(11, 2, 2, 0.7),
+      rgba(124, 124, 124, 0.7)
+    ),
     url(background1.jpg);
   background-position: center;
   background-size: cover;
   position: relative;
 }
+
 .nav-links {
   display: flex;
   padding: 3% 6%;
-  justify-content:space-between;
+  justify-content: space-between;
   align-items: center;
 }
+
 nav img {
   width: 150px;
 }
+
 .nav-links {
   flex: 1;
   text-align: right;
 }
+
 .nav-links ul li {
   list-style: none;
   display: inline-block;
   padding: 30px 50px;
   position: relative;
 }
-.nav-links ul li a {
-  color: white;
-  text-decoration: none;
-  font-size: 13px;
-}
+
 nav a {
   color: white;
   text-decoration: none;
   font-weight: bold;
 }
+
 .nav-links ul li {
   list-style: none;
   display: inline-block;
@@ -49,19 +53,18 @@ nav a {
 
 .nav-links ul li a {
   color: rgba(255, 255, 255, 0.94);
-  text-decoration: none;
-  font-size: 13px;
+  text-decoration: ;
+  font-size: 16px;
 }
 .nav-links ul li a::after {
-  content: '';
+  content: "";
   width: 0%;
-  height: 2px;
+  height: 4px;
   background: #f44336;
   display: block;
   margin: auto;
-  transition: 0.5s ease-in-out;  
+  transition: 0.5s ease-in-out;
 }
-.nav-links ul li a :hover::after {
+.nav-links ul li a:hover::after {
   width: 100%;
 }
-
