--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
 }
-.header {
+.bar {
   min-height: 100vh;
   width: 100%;
   background-image: linear-gradient(
@@ -46,7 +46,7 @@ nav a {
 
 .nav-links ul li a {
   color: rgba(255, 255, 255, 0.94);
-  text-decoration: ;
+  text-decoration: center;
   font-size: 16px;
 }
 .nav-links ul li a::after {
@@ -109,14 +109,22 @@ nav a {
   margin: 10px 0 20px;
   font-size: 20px;
 }
-.img {
-  width: 5%;
-  height: 5%;
-  position: absolute;
-}
 .brother {
   text-align: right;
 }
-.brother h2 {
-  padding-right: 15.5em;
+* {
+  box-sizing: border-box;
+}
+
+.column {
+  float: right;
+  width: 46.25%;
+  padding: 0px;
+}
+
+/* Clearfix (clear floats) */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
 }
