--- a/style.css
+++ b/style.css
@@ -139,9 +139,6 @@ nav a {
 * {
   box-sizing: border-box;
 }
-* {
-  box-sizing: border-box;
-}
 
 .container {
   float: auto;
@@ -160,9 +157,8 @@ nav a {
 }
 
 .container {
-  flex: 0%;
+  flex: 5%;
   padding: 0px;
-}
-* {
-  box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
 }
